Helm/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: takeoutfood.k8s.com
      http:
        paths: 
          - path: /identity-service
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 8081
          - path: /product-service
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8082
          - path: /cart-service
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 8083
          - path: /order-service
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8084
          - path: /vnpay-service
            pathType: Prefix
            backend:
              service:
                name: vnpay-service
                port:
                  number: 8085
          - path: /shipping-service
            pathType: Prefix
            backend:
              service:
                name: shipping-service
                port:
                  number: 8086
